# rss-ai-super-speed

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  SKILL.md  build-android.sh  config.example.yaml  install.sh  prompt_context.md  settings.gradle.kts  skill.toml
.codex/plans/: android-add-rss-feed.md  android-modular-refactor.md  android-serverless-rss-reader.md  article-content-normalization.md  cross-device-highlights.md  fetch-full-timeout-fix.md  offline-first-article-cache.md  rss-conditional-refresh-cache.md  runtime-config-ttl.md  scheduled-tag-ai-prefetch.md  startup-refresh-performance-fix.md  tag-filter-flow-mode.md  vue-s3-web-app.md
app/: build.gradle.kts  proguard-rules.pro
aws/: README.md
aws/scripts/: deploy_backend.sh  deploy_rss_api.sh  deploy_web_app.sh  run_rss_api_e2e.sh
aws/terraform/: api_gateway.tf  dynamodb.tf  ecr.tf  eventbridge.tf  iam.tf  lambda_api.tf  lambda_browser.tf  locals.tf  outputs.tf  providers.tf  s3.tf  variables.tf  web_static.tf
aws/tests/: test_ai_client.py  test_app_fetch_jobs.py  test_app_tts.py  test_codex_provider.py  test_content_fetcher.py  test_content_formatter.py  test_content_sanitizer.py  test_rss_api_e2e.py  test_rss_refresh_cache.py  (+4 more)
scripts/: fetch_article.py  rss_subscriptions.py  run_web_app_local.sh
src/: codex_provider.rs  database.rs  fetcher.rs  fetcher_html.rs  filter.rs  lib.rs  main.rs  output.rs  search.rs  summarizer.rs  vector.rs
subscriptions/: ai-feeds.json
tests/: test_rss_subscriptions.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+81 files in other folders)
